[gd_scene load_steps=2 format=2]

[ext_resource path="res://GodetteVN/fundamentals/details/dialogBoxTextHandler.gd" type="Script" id=1]

[node name="textBox" type="RichTextLabel"]
margin_left = 526.0
margin_top = 862.0
margin_right = 1380.0
margin_bottom = 1000.0
rect_min_size = Vector2( 854, 138 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
visible_characters = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="autoTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="autoTimer" to="." method="_on_autoTimer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
